Bug 40139 - ksplash crashes after KDE startup
Summary: ksplash crashes after KDE startup
Status: RESOLVED FIXED
Alias: None
Product: ksplash
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandrake RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Matthias Ettrich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-04-04 15:03 UTC by Juraj Nospam
Modified: 2019-04-19 05:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj Nospam 2002-04-04 14:53:27 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           ksplash
Version:           KDE 3.0.0 
Severity:          normal
Installed from:    Mandrake RPMs
Compiler:          Not Specified
OS:                Linux
OS/Compiler notes: Mandrake 8.1 installed from RPMs from ftp.kde.org.

I installed the Mandrake 8.1 RPMs (I have not yet upgraded to 8.2) of KDE and ksplash crashes right after startup. Everything else works ok but I get this ugly dump:

[New Thread 1024 (LWP 16758)]
0x40d894f9 in wait4 () from /lib/libc.so.6
#0  0x40d894f9 in wait4 () from /lib/libc.so.6
#1  0x40e07098 in __check_rhosts_file () from /lib/libc.so.6
#2  0x40c52986 in waitpid (pid=16778 stat_loc=0x0 options=0)
    at wrapsyscall.c:172
#3  0x40342ffe in KCrash::defaultCrashHandler (sig=0) at kcrash.cpp:224
#4  0x40c9c847 in _IO_2_1_stderr_ () from /usr/lib/libstdc++-libc6.2-2.so.3


(Submitted via bugs.kde.org)
Comment 1 Stephan Kulow 2002-04-04 15:58:37 UTC
On Thursday 04 April 2002 16:53 juraj.nospam@bednar.sk wrote:
> Package: ksplash
> Version: KDE 3.0.0
> Severity: normal
> Installed from:    Mandrake RPMs
> Compiler:          Not Specified
> OS:                Linux
> OS/Compiler notes: Mandrake 8.1 installed from RPMs from ftp.kde.org.
>
> I installed the Mandrake 8.1 RPMs (I have not yet upgraded to 8.2) of KDE
> and ksplash crashes right after startup. Everything else works ok but I
> get this ugly dump:

Oh please. it has been reported the tenth time now. bugs.kde.org has such a=
=20
powerfull full text search...

Greetings Stephan
Comment 2 Thomas Baumgart 2019-04-19 05:12:18 UTC
Git commit f328d389f6af43cadf16fd094f2cbfd12e020d22 by Thomas Baumgart.
Committed on 19/04/2019 at 05:11.
Pushed by tbaumgart into branch '5.0'.

Keep file permissions when replacing existing file
FIXED-IN: 5.0.4

Differential Revision: https://phabricator.kde.org/D20646

M  +5    -1    kmymoney/plugins/xml/xmlstorage.cpp

https://commits.kde.org/kmymoney/f328d389f6af43cadf16fd094f2cbfd12e020d22