kmymoney/plugins/xml/xmlstorage.cpp
@@ -452,6 +452,8 @@ void XMLStorage::saveToLocalFile(const QString& localFile, IMyMoneyOperationsFor
     }
   }
 
+  // Permissions to apply to new file
+  QFileDevice::Permissions fmode = QFileDevice::ReadUser | QFileDevice::WriteUser;
 
   // Create a temporary file if needed
   QString writeFile = localFile;
@@ -460,6 +462,8 @@ void XMLStorage::saveToLocalFile(const QString& localFile, IMyMoneyOperationsFor
     tmpFile.open();
     writeFile = tmpFile.fileName();
     tmpFile.close();
+    // Since file is going to be replaced, stash the original permissions so they can be restored
+    fmode = QFile::permissions(localFile);
   }
 
   /**
@@ -530,7 +534,7 @@ void XMLStorage::saveToLocalFile(const QString& localFile, IMyMoneyOperationsFor
     if (!QFile::remove(localFile) || !QFile::copy(writeFile, localFile))
       throw MYMONEYEXCEPTION(QString::fromLatin1("Failure while writing to '%1'").arg(localFile));
   }
-  QFile::setPermissions(localFile, QFileDevice::ReadUser | QFileDevice::WriteUser);
+  QFile::setPermissions(localFile, fmode);
   pWriter->setProgressCallback(0);
 }
 
